Fix overflow issue

--- a/src/sections/home/styles/desktop/home-layout.css
+++ b/src/sections/home/styles/desktop/home-layout.css
@@ -1,6 +1,7 @@
 #home {
 	position: fixed;
-	overflow: auto;
+	overflow-x: hidden;
+	overflow-y: auto;
 	height: auto;
 	width: 100%;
 	max-width: none;
